# agentic-ai-materials

./: .gitignore  CLAUDE.md  PLAN.md  README.md  ROADMAP.md  WALKTHROUGH.md  pyproject.toml
.claude/: launch.json
config/: mission.yaml
config/missions/: qd-emitter.yaml  rediscovery.yaml  tco.yaml
data/benchmark/: latest
data/benchmark/20260707-0437/: benchmark.md  random.db  similarity.db
data/benchmark/20260707-1212/: agent.db  agent_notebook.md  benchmark.md  random.db  similarity.db
data/benchmark/20260707-1213/: random.db
notes/: README.md  impact-strategy.md  positioning.md  reading-list.md
paper/: draft.md
results/2026-07-07-benchmark-1/: agent_notebook.md  analysis.md  baseline-seed-statistics.md  report-pv-absorber-v1-20260707-1340.md
results/2026-07-07-benchmark-2/: agent_notebook.md  analysis.md  novelty-audit.md  report-pv-absorber-v1-20260708-0020.md
results/2026-07-08-qd-emitter/: agent_notebook.md  analysis.md  benchmark.md
results/2026-07-08-rediscovery/: analysis.md  benchmark.md
results/2026-07-08-replication/: analysis.md  seed7-table.md
results/2026-07-18-bo-baseline/: analysis.md
scripts/: smoke_pipeline.py
src/athanor/: __init__.py  baselines.py  benchmark.py  cli.py  config.py  dashboard.py  db.py  metrics.py  notebook.py  prototypes.py
src/athanor/web/: app.css  (+3 more)
src/matdiscover/: __init__.py  baselines.py  benchmark.py  cli.py  config.py  dashboard.py  db.py  metrics.py
tests/: test_agent.py  test_candidates.py  test_config.py  test_db_notebook.py  test_filters.py  test_missions.py  test_phase3.py  test_phase4.py
(+88 files in other folders)
